fix: health check부분에 start_interval: 1s 추가

--- a/docker-compose-single-node.yaml
+++ b/docker-compose-single-node.yaml
@@ -13,6 +13,7 @@ services:
       interval: 5s
       timeout: 30s
       start_period: 0s
+      start_interval: 1s
       retries: 30
     volumes:
       - "mongo1_data:/data/db"
